boulder/boulder/tests/compile_fail/type/structures/init/unknown_field.bo
# Type `A` has no field named `fielt`
# (10:

struct A {
    field: u32
}

fn test() -> A {
    A {
        fielt: 7,
    }
}